Fix potential CSS issue when <header> elements might get the wrong line-height, which would mess up the vertical alignment of the .icons div

--- a/css/explorpc.less
+++ b/css/explorpc.less
@@ -77,7 +77,10 @@
 		vertical-align: top;
 		.border-box;
 
-		header h4 { .explorpc-header; }
+		header { 
+			line-height: 1;
+			h4 { .explorpc-header; }
+		}
 	}
 
 	.CodeMirror {
